student and attending view calendar
