# api/server.go
@@ -60,6 +60,8 @@ func NewServer(config util.Config, store *db.Store) (*Server, error) {
 	{
 		routerV1.POST("/rotation/design", server.designRotation)
 		routerV1.POST("/rotation/reset", server.resetRotation)
+		routerV1.GET("/rotation/student", server.studentCalendar)
+		routerV1.GET("/rotation/attending", server.attendingCalendar)
 	}
 	{
 		routerV1.GET("/group/list", server.listGroupsByAcademicYear)
